force-app/main/default/objects/CR__c/CR__c.object-meta.xml
<CustomObject>
    <description>用于管理变更请求(Change Request)、需求变更、审批流程及执行跟踪的自定义对象</description>
    <label>CR</label>
    <nameField>
        <label>CR名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>