force-app/main/default/objects/CR__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <label>实际完成日期</label>
    <type>Date</type>
</CustomField>