force-app/main/default/objects/CR__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>审批意见</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>