force-app/main/default/objects/CR__c/fields/CR_Number__c.field-meta.xml
<CustomField>
    <fullName>CR_Number__c</fullName>
    <displayFormat>CR-{000000}</displayFormat>
    <label>CR编号</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>