force-app/main/default/objects/CR__c/fields/CR_Status__c.field-meta.xml
<CustomField>
    <fullName>CR_Status__c</fullName>
    <label>CR状态</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已取消</fullName>
            </value>
            <value>
                <fullName>待评估</fullName>
            </value>
            <value>
                <fullName>已拒绝</fullName>
            </value>
            <value>
                <fullName>待审批</fullName>
            </value>
            <value>
                <fullName>已完成</fullName>
            </value>
            <value>
                <fullName>已批准</fullName>
            </value>
            <value>
                <fullName>实施中</fullName>
            </value>
            <value>
                <fullName>草稿</fullName>
            </value>
            <value>
                <fullName>评估中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>