force-app/main/default/objects/CR__c/fields/CR_Type__c.field-meta.xml
<CustomField>
    <fullName>CR_Type__c</fullName>
    <label>CR类型</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>功能变更</fullName>
            </value>
            <value>
                <fullName>需求调整</fullName>
            </value>
            <value>
                <fullName>缺陷修复</fullName>
            </value>
            <value>
                <fullName>技术优化</fullName>
            </value>
            <value>
                <fullName>配置修改</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>