force-app/main/default/objects/CR__c/fields/Impact_Scope__c.field-meta.xml
<CustomField>
    <fullName>Impact_Scope__c</fullName>
    <label>影响范围</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>