force-app/main/default/objects/CR__c/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <label>计划完成日期</label>
    <type>Date</type>
</CustomField>