force-app/main/default/objects/CR__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>提出人</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CRs (Requester)</relationshipLabel>
    <relationshipName>CR_Requester</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>