force-app/main/default/objects/CR__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>提交日期</label>
    <type>Date</type>
</CustomField>